# agent-book-translate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  flake.nix  nfpm.yaml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docs/superpowers/plans/: 2026-05-25-observable-jobs.md  2026-05-25-pause-resume-checkpoint.md
docs/superpowers/specs/: 2026-05-25-pause-resume-checkpoint-design.md
skills/agent-book-translate/: SKILL.md
src/: config.rs  error.rs  lib.rs  main.rs
src/agent/: client.rs  json_healer.rs  mod.rs  prompt.rs
src/core/: engine.rs  migration.rs  mod.rs  parser.rs  progress.rs  qa.rs  router.rs
src/db/: checkpoint.rs  mod.rs  series.rs
src/job/: control.rs  mod.rs
tests/: client_tests.rs  config_tests.rs  db_tests.rs  epub_integration_tests.rs  job_tests.rs  json_healer_tests.rs  migration_tests.rs  mock_api_tests.rs  parser_tests.rs  progress_tests.rs
