[package]
name = "agent-book-translate"
version = "0.1.7"
edition = "2024"
rust-version = "1.85.0"
authors = ["Xuepoo Foter <foter@example.com>"]
description = "A powerful LLM-driven agentic EPUB book translator with robust progress monitoring and recovery"
repository = "https://github.com/Xuepoo/agent-book-translate"
license = "MIT"
readme = "README.md"
keywords = ["epub", "translation", "agentic", "llm", "openai"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Configuration
toml = "1.1"
dirs = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Archive handling
zip = "7"

# HTTP client & OpenAI-compatible API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-openai = "0.41"

# HTML/XML parsing
scraper = "0.27"

# SQLite storage
rusqlite = { version = "0.40", features = ["bundled"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Progress bar
indicatif = "0.18"

# Retry with exponential backoff
tokio-retry = "0.3"

# UUID for workspace isolation
uuid = { version = "1", features = ["v4"] }

# Time handling for job state files
chrono = { version = "0.4", features = ["serde"] }

# Regex for JSON healing
regex = "1"

# Temporary workspace handling
tempfile = "3"

[dev-dependencies]
# HTTP mocking for tests
wiremock = "0.6"

# Snapshot testing
insta = { version = "1", features = ["serde"] }

[profile.release]
# Optimize for binary size (< 2MB target)
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
